--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body{
-    background: url(images/bg.jpeg);
+    /* background: url(images/bg.jpeg); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
